# vim: set noexpandtab:

2013-12-19 Steve
	* Added SUSYTools/data directory to the new installation script

2013-12-17 Steve
	* Commented out old getEventWeight methods
	* Added static method to SusyNtTools to get cross section info from SUSYTools: getCrossSection
	* Added bool flag to getEventWeight which will use the SUSYTools xsec: useSusyXsec

2013-12-15 Steve
	* Updated new installation script for checking out minimal SUSYTools content
		* Script only checks out BTagCalib and SUSYCrossSection;
		  it modifies the Makefile to remove the dependencies
	* Removed BTagCalib in favor of the SUSYTools class, 
	  which required updated usage.

2013-12-14 Steve
	* Adding skeleton of script to check out minimal required classes from SUSYTools,
	  installMinimalSUSYTools.sh
	* Adding methods to SusyNtTools: numBJets(jets), getBJets(jets)
	* Minor cleanup in SusyNt.h
	* Tagging SusyNtuple-00-01-06

2013-11-11 Davide
	* Changed several SusyNtTools functions to be static (this allows
	to reduce the code duplication downstream in classes inheriting
	from SusyNtTools)

2013-11-11 Steve
	* Removed obsolete btag codes for p1181

2013-11-07 Steve
	* Updated BTag calibrations to match SUSYTools-00-03-06

2013-11-07 Steve
	* Tagging SusyNtuple-00-01-05

2013-10-04 Davide
	* Add etcone20 to Lepton

2013-09-25 Davide
	* Add special signal lepton definition for 2LepWH

2013-08-19 Davide
	* Add secondary vtx mass to Jet

2013-08-16 Davide
	* Add emfrac to Jet
	* Add mc truth particles for ttbar (implemented in WhTruthExtractor::ttbarMcAtNloParticles)

2013-07-30 Steve
	* Added jetPtCut arg to Meff methods

2013-07-27 Anyes
	* Update hasZllZll method to return lep idx making Z's

2013-07-12 Steve
	* Added hasZllZll method to SusyNtTools

2013-7-22 Serhan Mete <amete@cern.ch>
	* SusyNtTools.[cxx,h]: SusyNtTools::buildSumwMap now handles Simplified Model

2013-07-22 Anyes
	* Added mEff w/o leptons
	* Few tweaks to TGuiUtils

2013-07-12 Steve